# PilotBA

./: .editorconfig  .gitignore  COORDINATION_SYSTEM.md  DEVELOPMENT_SPRINT_2025-12-23.md  EXECUTIVE_SUMMARY.md  HANDYMAN_DEMO_GUIDE.md  HANDYMAN_TASKS_2025-12-23.md  HANDYMAN_TASKS_2026-01-08.md  Makefile  PROGRESS_REVIEW_2025-12-23.md  PROJECT_ARCHITECTURE.md  QA_TEST_REPORT.md  README.md  RISKS_AND_ISSUES.md  SPRINT_2026-01-08.md  TEAM_ONBOARDING.md  TESTING_SUMMARY.md  TEST_INFRASTRUCTURE_OVERVIEW.md  TEST_REPORT_2026-01-09.md  TOASTER_COMPREHENSIVE_QA_REPORT.md  TOASTER_QA_FINAL_REPORT.md  TOASTER_TASKS_2025-12-23.md  TOASTER_TASKS_2026-01-08.md  WORKFLOW_GUIDE.md  WORK_REVIEW_2025-12-23.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.github/: GITHUB_WORKFLOW.md  (+3 more)
backend/: .env.example  Cargo.toml  justfile
backend/benches/: query_benchmarks.rs
backend/migrations/: 20231223_001_create_users.sql  20231223_002_create_files.sql  20231223_003_create_teams.sql  20231223_004_create_audit_log.sql
backend/src/: errors.rs  lib.rs  main.rs
backend/src/connectors/: csv.rs  database.rs  mod.rs  parquet.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs
backend/src/routes/: auth.rs  files.rs  health.rs  mod.rs  teams.rs
backend/src/services/: audit.rs  mod.rs  permissions.rs
backend/src/services/auth/: mod.rs
backend/src/services/cache/: mod.rs
backend/src/services/dashboard/: mod.rs
backend/src/utils/: mod.rs
backend/tests/common/: fixtures.rs  mod.rs
backend/tests/integration/: api_tests.rs  auth_tests.rs  mod.rs
backend/tests/unit/: mod.rs  models_tests.rs
(+237 files in other folders)
